# quant-factor-mining

./: .airflowignore  .gitignore  DAG_pipeline.py  LICENSE  README.md  airflow.cfg.example  back_testing.py  config.example.yaml  data_acquisition.py  factor_attribution.py  pyproject.toml  task_1.py  task_2.py  task_3.py  task_retry.py  visualization.py
pipelines/: DAG_pipeline.py  task_1.py  task_2.py  task_3.py  task_retry.py
quantfactor/: __init__.py  back_testing.py  factor_attribution.py  factor_mining.py  ic_calculator.py
quantmine/: __init__.py  back_testing.py  config.py  data_acquisition.py  datareader.py  factor_attribution.py  factor_mining.py  factor_register.py  ic_calculator.py  load_config.py
test/: README.md  conftest.py  test_calculate_all_factors.py  test_config.py  test_constituents_source.py  test_cs_ic_golden.py  test_factor_registry.py  test_factors_golden.py  test_forward_returns_golden.py  test_market_data.py  test_quantile_backtest.py  test_turnover_cost.py
