[project]
name = "quant-factor-mining"
dependencies = [
    "numpy>=2.4",
    "pandas>=3.0",
    "scipy>=1.17",
    "statsmodels>=0.14",
    "pyarrow>=24.0",
]

[project.optional-dependencies]
data = ["yfinance>=1.4", "beautifulsoup4>=4.14", "pandas-datareader>=0.11", "curl-cffi>=0.15"]
viz = ["plotly>=6.8"]

[dependency-groups]
dev = ["pytest>=9.1", "ipykernel>=7.2", "jupyter>=1.1"]
pipeline = ["apache-airflow>=3.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.license]
text = "MIT"  # 或者你想用的许可证，之前没讨论过这个，需要你确认