[project]
name = "quantmine"
version = "0.2.0"
description = "Equity factor research library with honest statistics: Newey-West IC tests, multiple-testing control, point-in-time universe, turnover-based costs, Carhart attribution"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.4",
    "pandas>=3.0",
    "scipy>=1.17",
    "statsmodels>=0.14",
    "pyarrow>=24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
data = ["yfinance>=1.4", "beautifulsoup4>=4.14", "pandas-datareader>=0.11", "curl-cffi>=0.15"]
viz = ["plotly>=6.8"]

[dependency-groups]
dev = ["pytest>=9.1", "ipykernel>=7.2", "jupyter>=1.1"]
pipeline = ["apache-airflow>=3.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quantmine"]

[tool.pytest.ini_options]
testpaths = ["test"]
